# craftsman

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: use-case.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  validate.yml
craftsman-plugin/: README.md
craftsman-plugin/.claude-plugin/: plugin.json
craftsman-plugin/agents/: cicd-debugger.md  coder.md  debugger.md  dependency-auditor.md  docs-writer.md  orchestrator.md  planner.md  refactor-agent.md  release-prep.md  researcher.md  reviewer.md  security.md  tester.md  ui-designer.md
craftsman-plugin/commands/: doctor.md  init.md  quick.md  review.md  security.md
craftsman-plugin/hooks/: hooks.json  pretooluse-graphify-bash  pretooluse-graphify-read  run-hook.cmd  session-start
craftsman-plugin/skills/caveats-and-status/: SKILL.md
craftsman-plugin/skills/commit-craft/: SKILL.md
craftsman-plugin/skills/environment-memory/: SKILL.md
craftsman-plugin/skills/graphify-recurring-bugs/: SKILL.md
craftsman-plugin/skills/ideation-first/: SKILL.md
craftsman-plugin/skills/ui-craft/: SKILL.md
craftsman-testbed/: run-checks.sh
craftsman-testbed/existing-node/: package-lock.json  package.json
craftsman-testbed/existing-node-with-graph/: KNOWN_ISSUES.md  package-lock.json  package.json
craftsman-testbed/existing-python/: README.md  pyproject.toml
docs/: _config.yml  index.md  results.md  use-cases.md
(+6 files in other folders)
